# api_fastapi

./: README.md  pyproject.toml
api/: app.py  security.py  settings.py
api/db/: db_user.py  sqlite_connection.py
api/models/: testeModel.py  tokenModel.py  userModel.py
api/routes/: router.py
api/routes/v0/: admin.py  endpoint_teste.py
