[tool.poetry]
name = "api-model"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = "^0.34.2"
aiosqlite = "^0.21.0"


[tool.poetry.group.dev.dependencies]
black = "24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
